--- a/index.html
+++ b/index.html
@@ -7,14 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="div1"></div>
-    <div class="div2">
-        <div class="square"></div>
-        <div class="square2"></div>
-    </div>
-
-
-
+<div class="panel"></div>
+<div class="box"></div>
+<div class="panel"></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 <script src="app.js"></script> 
